--- a/content/B0778FZ37G-es.md
+++ b/content/B0778FZ37G-es.md
@@ -16,6 +16,7 @@ country: 'es'
 flag: '🇪🇸'
 buyurl: 'https://www.amazon.es/dp/B0778FZ37G/?tag=tolees-21'
 descuento: '26.93'
+average: '18.99'
 ---
 
 Ahora mismo tienes [Paladinz M-303 - Soporte de pared para televisor  inclinación y giro  carga máxima  25 KG  Negro](https://www.amazon.es/dp/B0778FZ37G/?tag=tolees-21) a 18.99 EUR (original: 25.99 EUR) (26.93 %  de descuento) en el siguiente enlace!
