--- a/content/B07R39Z81Y-es.md
+++ b/content/B07R39Z81Y-es.md
@@ -16,6 +16,7 @@ comparePrice: 696.5 EUR
 prodname: 'Philips 6700 Series 65PUS6754/12 TV 165 1 cm  65"  4K Ultra HD Smart TV WiFi Plata - Televisor  165 1 cm  65"   3840 x 2160 Pixeles  LED  Smart TV  WiFi  Plata '
 country: 'es'
 flag: '🇪🇸'
+brand: ''
 buyurl: 'https://www.amazon.es/dp/B07R39Z81Y/?tag=tolees-21'
 descuento: '14.14'
 average: '598.0'
