--- a/content/B07Y1N682F-es.md
+++ b/content/B07Y1N682F-es.md
@@ -16,6 +16,7 @@ comparePrice: 28.82 EUR
 prodname: 'Jelly Comb [2.4G] combinación de mini teclado y mouse ultra delgado inalámbrico en diseño alemán QWERTZ para MacBook  PC  portátil y Smart TV [Blanco y plateado]'
 country: 'es'
 flag: '🇪🇸'
+brand: ''
 buyurl: 'https://www.amazon.es/dp/B07Y1N682F/?tag=tolees-21'
 descuento: '13.22'
 average: '25.01'
