--- a/content/B074N23PV9-es.md
+++ b/content/B074N23PV9-es.md
@@ -16,6 +16,7 @@ comparePrice: 7.99 EUR
 prodname: 'Funda para Smasung Smart TV Mando a Distancia BN59-01242A SIKAI Anti-lost Carcasa Resistente a los Golpes Protectora Para Samsung BN59-01274A  Brillar en El Oscuro '
 country: 'es'
 flag: '🇪🇸'
+brand: ''
 buyurl: 'https://www.amazon.es/dp/B074N23PV9/?tag=tolees-21'
 descuento: '5.13'
 average: '7.716666666666667'
