--- a/content/B07W8197MQ-es.md
+++ b/content/B07W8197MQ-es.md
@@ -16,6 +16,7 @@ comparePrice: 163.82 EUR
 prodname: 'Televisor HD 60cm 24" Smart TV Serie N4305'
 country: 'es'
 flag: '🇪🇸'
+brand: ''
 buyurl: 'https://www.amazon.es/dp/B07W8197MQ/?tag=tolees-21'
 descuento: '3.30'
 average: '158.42'
