--- a/content/B074N23PV9-es.md
+++ b/content/B074N23PV9-es.md
@@ -5,7 +5,7 @@ date: 2020-02-06 15:39:47
 image: 'https://m.media-amazon.com/images/I/41C+k2S+TSL._AC_._SL400_.jpg'
 comments: true
 category: ofertas
-author: ring
+author: 'tole.es'
 slug: 'B074N23PV9-es Funda para Smasung Smart TV Mando a Distancia BN59-01242A...'
 sku: 'B074N23PV9-es'
 tags: [ 'smart','tv', ]
