--- a/content/B07Y1N682F-es.md
+++ b/content/B07Y1N682F-es.md
@@ -5,7 +5,7 @@ date: 2020-08-14 08:32:11
 image: 'https://m.media-amazon.com/images/I/41c0Iqs0-xL._SL400_.jpg'
 comments: true
 category: ofertas
-author: ring
+author: 'tole.es'
 slug: 'B07Y1N682F-es Jelly Comb [2.4G] combinación de mini teclado y mouse...'
 sku: 'B07Y1N682F-es'
 tags: [ 'smart','tv', ]
