--- a/content/B07R39Z81Y-es.md
+++ b/content/B07R39Z81Y-es.md
@@ -5,7 +5,7 @@ date: 2020-05-27 08:05:04
 image: 'https://m.media-amazon.com/images/I/41rhtlo3EdL._SL400_.jpg'
 comments: true
 category: ofertas
-author: ring
+author: 'tole.es'
 slug: 'B07R39Z81Y-es Philips 6700 Series 65PUS6754/12 TV 165 1 cm 65" 4K Ultra...'
 sku: 'B07R39Z81Y-es'
 tags: [ 'smart','televisor','tv', ]
