--- a/content/B074N23PV9-es.md
+++ b/content/B074N23PV9-es.md
@@ -8,7 +8,7 @@ category: ofertas
 author: 'tole.es'
 slug: 'B074N23PV9-es Funda para Smasung Smart TV Mando a Distancia BN59-01242A...'
 sku: 'B074N23PV9-es'
-tags: [ 'Accesorios para TV, vídeo y home cinema','Electrónica','Mesas y soportes para TV','Soportes de pared y techo para TV','TV, vídeo y home cinema','Televisores','smart','tv', ]
+tags: [ 'smart','tv', ]
 actualPrice: 7.58 EUR
 currency: EUR
 price: 7.58
