--- a/content/B07Y1N682F-es.md
+++ b/content/B07Y1N682F-es.md
@@ -8,7 +8,7 @@ category: ofertas
 author: 'tole.es'
 slug: 'B07Y1N682F-es Jelly Comb [2.4G] combinación de mini teclado y mouse...'
 sku: 'B07Y1N682F-es'
-tags: [ 'Clientes de streaming','Dispositivos para el streaming','Electrónica','Equipos de audio y Hi-Fi','TV, vídeo y home cinema','Televisores','smart','tv', ]
+tags: [ 'smart','tv', ]
 actualPrice: 25.01 EUR
 currency: EUR
 price: 25.01
