--- a/content/B07R39Z81Y-es.md
+++ b/content/B07R39Z81Y-es.md
@@ -8,7 +8,7 @@ category: ofertas
 author: 'tole.es'
 slug: 'B07R39Z81Y-es Philips 6700 Series 65PUS6754/12 TV 165 1 cm 65" 4K Ultra...'
 sku: 'B07R39Z81Y-es'
-tags: [ 'Clientes de streaming','Dispositivos para el streaming','Electrónica','Equipos de audio y Hi-Fi','TV, vídeo y home cinema','Televisores','smart','televisor','tv', ]
+tags: [ 'smart','televisor','tv', ]
 actualPrice: 598.0 EUR
 currency: EUR
 price: 598.0
