--- a/content/B07R39Z81Y-es.md
+++ b/content/B07R39Z81Y-es.md
@@ -8,6 +8,7 @@ category: ofertas
 author: 'tole.es'
 slug: 'B07R39Z81Y-es Philips 6700 Series 65PUS6754/12 TV 165 1 cm 65" 4K Ultra...'
 sku: 'B07R39Z81Y-es'
+tags: [ 'smart','televisor','tv', ]
 actualPrice: 598.0 EUR
 currency: EUR
 price: 598.0
